Changed pixel to rem, optimized legibilty, made 62.5%, which is 10px, the root font size of our project, and fixed the blurriness of the discover our tours button

--- a/css/style.css
+++ b/css/style.css
@@ -22,19 +22,31 @@ Dark green: #28b485
    //            * MASTER CONTROLS *            //
   /////////////////////////////////////////////// */
 
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  text-rendering: optimizeLegibility;
+
+  /* font-size: 16px; */
+
   line-height: 1.7;
   color: #777777;
-  padding: 30px;
+  padding: 3rem;
+
+  /* Inherit */
+  box-sizing: border-box;
 }
 
 /*  ///////////////////////////////////////////////
@@ -45,21 +57,22 @@ body {
   .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     transition: all 0.2s;
     position: relative;
+    font-size: 1.6rem;
   }
 
   .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,0.3);
   }
 
   .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.3);
   }
 
   .btn::after {
@@ -67,7 +80,7 @@ body {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -117,12 +130,12 @@ body {
 
 .logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 4rem;
+  left: 4rem;
 }
 
 .logo {
-  height: 35px;
+  height: 3.5rem;
 }
 
 /*  ////// * Headings * ////// */
@@ -137,13 +150,13 @@ body {
   left: 50%;
 
   /* Moving in relation to itself */
-  transform: translate(-50%, -50%);
+  transform: translate(-49%, -49%);
 }
 
 .heading-primary {
   color: var(--white-primary);
   text-transform: uppercase;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 
   /* FIX A WEIRD SHIFT IN THE ANIMATION */
   backface-visibility: hidden;
@@ -151,9 +164,9 @@ body {
 
 .heading-primary-main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
 
   /* Animation Properties */
   animation-name: moveInLeft;
@@ -164,9 +177,9 @@ body {
 
 .heading-primary-sub {
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 400;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.75rem;
 
   /* Animation Properties */
   animation: moveInRight 1s ease-out;
@@ -179,10 +192,10 @@ body {
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
   }
   80% {
-    transform: translateX(10px);
+    transform: translateX(1rem);
   }
 
   100%{
@@ -194,11 +207,11 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
 
   80% {
-    transform: translateX(-10px);
+    transform: translateX(-1rem);
   }
 
   100%{
@@ -210,7 +223,7 @@ body {
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(3rem);
   }
  
   100%{
